--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ click==8.1.6
 colorama==0.4.6
 dill==0.3.7
 distlib==0.3.7
+et-xmlfile==1.1.0
 filelock==3.12.2
 flake8==6.1.0
 identify==2.5.26
@@ -15,6 +16,7 @@ mccabe==0.7.0
 mypy-extensions==1.0.0
 nodeenv==1.8.0
 numpy==1.25.2
+openpyxl==3.1.2
 packaging==23.1
 pandas==2.1.0
 pathspec==0.11.2
